syntax = "proto3";

package persistence_sdk.modules.splits.internal.queries.split;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/persistenceOne/persistenceSDK/modules/splits/internal/queries/split";

service Split {
  rpc Split(QueryRequest) returns (QueryResponse) {
    option (google.api.http).get = "/persistenceSDK/splits/ownable";
  };
}

message QueryRequest {
  string split_i_d = 1 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types.ID", (gogoproto.nullable) = false, (gogoproto.moretags) = 'valid:"required~required field SplitID missing"'];
}

message QueryResponse {
  bool success = 1;
  string error = 2 [(gogoproto.moretags) = 'swaggertype:"string"'];
  repeated string list = 3 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/helpers.Mappable"];
}